--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -11,8 +11,6 @@ main {
   .title-section { margin-bottom: var(--space-3); }
 }
 
-.page__section-hero { margin-top: 0; }
-
 .page__section-shelf {
   .page__section-content {
     min-height: 21.06rem;
